# it-db-group

./: .gitignore  Cargo.toml  docker-compose.yml
.github/workflows/: build.yml
Protos/: db.proto
client/: Cargo.toml  build.rs
client/src/: lib.rs  main.rs
client/src/app/: mod.rs
client/src/tui/: event.rs  ui.rs  update.rs
core/: Cargo.toml
core/src/: column.rs  db.rs  lib.rs  row.rs  scheme.rs  table.rs
core/src/types/: char_value.rs  date_value.rs  email_value.rs  int_value.rs  mod.rs  picture_value.rs  real_value.rs  string_value.rs
db/: Cargo.toml
db-api/: Cargo.toml
db-api/src/: char_value_dto.rs  client_req.rs  date_value_dto.rs  db.rs  email_value_dto.rs  envelope.rs  int_value_dto.rs  lib.rs  picture_value_dto.rs  real_value_dto.rs  row_dto.rs  scheme_dto.rs  string_value_dto.rs  table.rs
db-manager/: Cargo.toml
db-manager/.config/: config.toml
db-manager/src/: db_manager.rs
db/src/: db.rs  db_manager.rs
rest-server/: CMakeLists.txt  Controller.hpp  Server.cpp  Server.hpp  main.cpp
runner/: Cargo.toml
runner/src/: main.rs
runner/src/app/: mod.rs
runner/src/parser/: mod.rs
runner/src/tui/: mod.rs  ui.rs  update.rs
server/: Cargo.toml
server/src/: command_dispatcher.rs  db_manager_handler.rs  lib.rs  main.rs  server.rs  ws_server.rs
src/: client_bin.rs  db_manager.rs  lib.rs
src/client/app/: mod.rs
src/client/parser/: mod.rs
src/client/tui/: mod.rs  ui.rs  update.rs
src/core/: db.rs  mod.rs  row.rs  scheme.rs  table.rs
src/core/types/: char_value.rs  date_value.rs  email_value.rs  int_value.rs  mod.rs  picture_value.rs  real_value.rs  string_value.rs
src/db_api/: char_value_dto.rs  client_req.rs  date_value_dto.rs  db.rs  email_value_dto.rs  envelope.rs  int_value_dto.rs  mod.rs  picture_value_dto.rs  real_value_dto.rs  row_dto.rs  scheme_dto.rs  string_value_dto.rs  table.rs
src/server/: command_dispatcher.rs  db_manager_handler.rs  server.rs  ws_context.rs  ws_server.rs
src/transport/: builder.rs  mod.rs  poller.rs
transport/: Cargo.toml
transport/src/connectors/: builder.rs  connector.rs  core.rs  mod.rs  poller.rs
value_generator/src/: lib.rs
